提示词统一ui设置

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -1136,13 +1136,14 @@
   },
   "prompts": {
     "manage": "プロンプト",
-    "title": "{{appName}} プロンプト管理",
+    "title": "プロンプト管理",
     "claudeTitle": "Claude プロンプト管理",
     "codexTitle": "Codex プロンプト管理",
     "add": "プロンプトを追加",
     "edit": "プロンプトを編集",
-    "addTitle": "{{appName}} プロンプトを追加",
-    "editTitle": "{{appName}} プロンプトを編集",
+    "addTitle": "プロンプトを追加",
+    "editTitle": "プロンプトを編集",
+    "targetApps": "対象アプリ",
     "import": "既存をインポート",
     "count": "{{count}} 件のプロンプト",
     "enabled": "有効",
