--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -1136,13 +1136,14 @@
   },
   "prompts": {
     "manage": "提示词",
-    "title": "{{appName}} 提示词管理",
+    "title": "提示词管理",
     "claudeTitle": "Claude 提示词管理",
     "codexTitle": "Codex 提示词管理",
     "add": "添加提示词",
     "edit": "编辑提示词",
-    "addTitle": "添加 {{appName}} 提示词",
-    "editTitle": "编辑 {{appName}} 提示词",
+    "addTitle": "添加提示词",
+    "editTitle": "编辑提示词",
+    "targetApps": "目标应用",
     "import": "导入现有",
     "count": "共 {{count}} 个提示词",
     "enabled": "已启用",
