--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1136,13 +1136,14 @@
   },
   "prompts": {
     "manage": "Prompts",
-    "title": "{{appName}} Prompt Management",
+    "title": "Prompt Management",
     "claudeTitle": "Claude Prompt Management",
     "codexTitle": "Codex Prompt Management",
     "add": "Add Prompt",
     "edit": "Edit Prompt",
-    "addTitle": "Add {{appName}} Prompt",
-    "editTitle": "Edit {{appName}} Prompt",
+    "addTitle": "Add Prompt",
+    "editTitle": "Edit Prompt",
+    "targetApps": "Target Apps",
     "import": "Import Existing",
     "count": "{{count}} prompts",
     "enabled": "Enabled",
